--- a/Expedition/Resources/style.css
+++ b/Expedition/Resources/style.css
@@ -6,7 +6,7 @@ body {
     position: absolute; top: 350px; font-family: 'Avenir Next', sans-serif; font-weight: 600; font-style: normal; display: flex; align-items: center; justify-content: center; text-align: center; vertical-align: middle; color: #0d0d0d; left: 50%; transform: translate(-50%, -50%); width: 90%; height: 100px; background-color: #ffffff; border-radius: 20px; padding: 20px; box-sizing: border-box;
 }
 .title {
-    position: absolute; top: 150px; left: 50%; transform: translate(-50%, -50%); font-size: 34px; font-family: 'Avenir Next', sans-serif; font-weight: bold; font-style: normal; text-align: center; vertical-align: middle; background: linear-gradient(to right, #306FE5, #00A4E5); border-radius: 25px; height: 225px; width: 90%; display: flex; align-items: center; justify-content: center; color: white; padding: 25px; box-sizing: border-box;
+    position: absolute; top: 150px; left: 50%; transform: translate(-50%, -50%); font-size: 34px; font-family: 'Avenir Next', sans-serif; font-weight: bold; font-style: normal; text-align: center; vertical-align: middle; background: linear-gradient(to right, color(display-p3 0.19 0.43 0.89), color(display-p3 0 0.65 0.89)); border-radius: 25px; height: 225px; width: 90%; display: flex; align-items: center; justify-content: center; color: white; padding: 25px; box-sizing: border-box;
 }
 
 
