homepages fully work now :smile:

--- a/Expedition/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Expedition/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -1,32 +1,132 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SYH-sv-McG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <!--Web-->
+        <scene sceneID="4dw-9C-3ie">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                <viewController storyboardIdentifier="mainVC" title="Web" id="SYH-sv-McG" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TY0-A2-wNW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwY-QS-vk1" userLabel="goToOptions">
+                                <rect key="frame" x="382" y="55.5" width="22" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="aql-wT-gz5"/>
+                                    <constraint firstAttribute="width" constant="22" id="wvh-rY-oVT"/>
+                                </constraints>
+                                <state key="normal" image="gearshape" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghy-e7-X3Y">
+                                <rect key="frame" x="10" y="55.5" width="22" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="22" id="DDT-oj-05k"/>
+                                    <constraint firstAttribute="height" constant="22" id="Wk3-nX-wda"/>
+                                </constraints>
+                                <state key="normal" image="chevron.down" catalog="system"/>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kGu-fY-fL2">
+                                <rect key="frame" x="39" y="44" width="336" height="45"/>
+                                <color key="backgroundColor" name="Elevated"/>
+                                <color key="tintColor" name="Expedition Blue"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="cZY-xK-goP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" spellCheckingType="yes" keyboardType="webSearch" returnKeyType="go" smartInsertDeleteType="yes"/>
+                                <connections>
+                                    <action selector="sbarTouched:" destination="SYH-sv-McG" eventType="touchDown" id="FP3-qU-cJN"/>
+                                    <action selector="sbardone:" destination="SYH-sv-McG" eventType="editingDidEnd" id="8ev-Bi-gaB"/>
+                                    <action selector="searchBarSearchButtonClicked:" destination="SYH-sv-McG" eventType="primaryActionTriggered" id="npR-4t-Xe3"/>
+                                </connections>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHC-R0-iN9">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <color key="backgroundColor" name="Expedition White"/>
+                                <items>
+                                    <barButtonItem image="chevron.left" catalog="system" id="JSs-N2-ZwM">
+                                        <connections>
+                                            <action selector="backButton:" destination="SYH-sv-McG" id="TgI-em-wTF"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="OTO-fc-m2o"/>
+                                    <barButtonItem image="arrow.clockwise" catalog="system" id="dud-cr-8HY">
+                                        <connections>
+                                            <action selector="reloadButton:" destination="SYH-sv-McG" id="0dd-VY-MjH"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aSs-Qo-k48"/>
+                                    <barButtonItem image="rectangle.stack" catalog="system" id="oBp-21-sR9"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="waj-9r-tyQ"/>
+                                    <barButtonItem image="square.and.arrow.up" catalog="system" id="eTh-L7-fgv">
+                                        <connections>
+                                            <action selector="shareButton:" destination="SYH-sv-McG" id="NdI-pr-2JY"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                                <color key="barTintColor" name="Expedition White"/>
+                            </toolbar>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="PrH-os-oB0"/>
                         <color key="backgroundColor" name="Expedition White"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="tintColor" systemColor="labelColor"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="PrH-os-oB0" firstAttribute="trailing" secondItem="qwY-QS-vk1" secondAttribute="trailing" constant="10" id="01h-eP-4Mv"/>
+                            <constraint firstItem="ghy-e7-X3Y" firstAttribute="leading" secondItem="PrH-os-oB0" secondAttribute="leading" constant="10" id="F5X-Wm-rAF"/>
+                            <constraint firstItem="kGu-fY-fL2" firstAttribute="leading" secondItem="ghy-e7-X3Y" secondAttribute="trailing" constant="7" id="H65-EM-fVf"/>
+                            <constraint firstItem="kGu-fY-fL2" firstAttribute="centerY" secondItem="ghy-e7-X3Y" secondAttribute="centerY" id="IUn-tL-yva"/>
+                            <constraint firstItem="wHC-R0-iN9" firstAttribute="leading" secondItem="PrH-os-oB0" secondAttribute="leading" id="aK9-ZX-KeS"/>
+                            <constraint firstItem="qwY-QS-vk1" firstAttribute="leading" secondItem="kGu-fY-fL2" secondAttribute="trailing" constant="7" id="it5-yb-qE3"/>
+                            <constraint firstItem="kGu-fY-fL2" firstAttribute="top" secondItem="PrH-os-oB0" secondAttribute="top" id="jDe-9D-mhR"/>
+                            <constraint firstAttribute="trailing" secondItem="wHC-R0-iN9" secondAttribute="trailing" id="oUm-Y5-ZLB"/>
+                            <constraint firstItem="qwY-QS-vk1" firstAttribute="centerY" secondItem="kGu-fY-fL2" secondAttribute="centerY" id="rx6-Eg-Isy"/>
+                            <constraint firstItem="wHC-R0-iN9" firstAttribute="bottom" secondItem="PrH-os-oB0" secondAttribute="bottom" id="yOx-KD-kfV"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="accessibilityToolbar" destination="wHC-R0-iN9" id="dxv-Px-5Pg"/>
+                        <outlet property="menuLeft" destination="F5X-Wm-rAF" id="ql8-jH-3yu"/>
+                        <outlet property="optionsRight" destination="01h-eP-4Mv" id="7wV-ot-Q3J"/>
+                        <outlet property="sbarHeight" destination="cZY-xK-goP" id="nth-Q3-dzb"/>
+                        <outlet property="sbarTop" destination="jDe-9D-mhR" id="tzX-x2-buj"/>
+                        <outlet property="searchBar" destination="kGu-fY-fL2" id="1PC-wZ-VVz"/>
+                        <outlet property="toolbarBottom" destination="yOx-KD-kfV" id="7zu-AM-ZCk"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cS6-n5-B0P" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="47.826086956521742" y="372.99107142857139"/>
+            <point key="canvasLocation" x="726" y="373"/>
         </scene>
     </scenes>
     <resources>
-        <namedColor name="Expedition White">
+        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
+        <image name="chevron.down" catalog="system" width="128" height="72"/>
+        <image name="chevron.left" catalog="system" width="96" height="128"/>
+        <image name="gearshape" catalog="system" width="128" height="121"/>
+        <image name="rectangle.stack" catalog="system" width="128" height="122"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <namedColor name="Elevated">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="Expedition Blue">
+            <color red="0.29800000786781311" green="0.5690000057220459" blue="0.85100001096725464" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <namedColor name="Expedition White">
+            <color red="0.9570000171661377" green="0.9570000171661377" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
